# umrt-arm-ros-firmware

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Docker Instructions.txt  Doxyfile  NOTICE  README.md  arm-firmware.service  doxygen.conf  highpowersteppermotordriver.tag.xml  keyboard_operator.py  launch.sh  main.cpp  package.in.xml  package.xml  stop.sh  umrt-arm-firmware-lib.tag.xml  umrt-arm-image.DockerFile  umrt-arm-ros-firmware.xml
.github/workflows/: ros-build.yaml  semver.yaml
arduino-stepper-controller/: CommunicationMaster.cpp  CommunicationMaster.py  ConnectionManager.cpp  ConnectionManager.hpp  SYSEX_COMMANDS.h  arduino-stepper-controller.ino  test.py
arm-firmware/: CMakeLists.txt  package.xml
arm-firmware/hardware/: diffbot_system.cpp
arm-firmware/hardware/include/: Driver.hpp
arm-ros-firmware/: CMakeLists.txt  README.md  arm_firmware.xml  arm_ros_firmware.xml  keyboard_operator.py  package.xml
arm-ros-firmware/bringup/config/: diffbot_controllers.yaml
arm-ros-firmware/bringup/launch/: diffbot.launch.py
arm-ros-firmware/description/launch/: view_robot.launch.py
arm-ros-firmware/description/ros2_control/: diffbot.ros2_control.xacro
arm-ros-firmware/description/urdf/: diffbot.urdf.xacro
arm-ros-firmware/doc/: userdoc.rst
arm-ros-firmware/hardware/: StepperAdapter.cpp  diffbot_system.cpp
arm-ros-firmware/hardware/include/: SPIComms.hpp  SYSEX_COMMANDS.h  StepperAdapter.cpp  StepperAdapter.hpp  StepperController.cpp  StepperController.h
arm-ros-firmware/hardware/include/arm-firmware-lib/: CMakeLists.txt
arm-ros-firmware/hardware/include/arm_firmware/: diffbot_system.hpp  visibility_control.h
arm-ros-firmware/hardware/include/arm_ros_firmware/: StepperAdapter.hpp  diffbot_system.hpp  visibility_control.h
arm-ros-firmware/hardware/include/ros2_control_demo_example_2/: diffbot_system.hpp
arm-ros-firmware/test/: test_urdf_xacro.py  test_view_robot_launch.py
bringup/config/: diffbot_controllers.yaml  prairie_pioneer.ros2_control.xacro  project_perry.ros2_control.xacro  umrt_arm_controllers.yaml
bringup/launch/: diffbot.launch.py  prairie_pioneer.launch.py  project_perry.launch.py
communication-master-example/: .clang-format  .gitignore  CMakeLists.txt  CommunicationTest.h  SYSEX_COMMANDS.h  StepperController.cpp  StepperController.h  Utils.h  main.cpp
communication-master-example/openFrameworksArduino/: CMakeLists.txt
config/urdf/: prairie_pioneer.urdf.xacro
description/launch/: view_robot.launch.py
description/ros2_control/: diffbot.ros2_control.xacro  prairie_pioneer.ros2_control.xacro  project_perry.ros2_control.xacro
description/urdf/: diffbot.urdf.xacro  prairie_pioneer.urdf.xacro  project_perry.urdf.xacro
doc/: userdoc.rst
hardware/: ArduinoStepperController.cpp  StepperAdapter.cpp  arduino_stepper_adapter.cpp  diffbot_system.cpp  mks_stepper_adapter.cpp  project_perry_controller.cpp  robotic_arm_control_system.cpp  rover_control_system.cpp  stepper_adapter.cpp  wheel_adapter.cpp
hardware/include/: enchantum_single_header.hpp
hardware/include/ros2_control_demo_description/: CMakeLists.txt
hardware/include/ros2_control_demo_description/prairie_pioneer/urdf/: prairie_pioneer.urdf.xacro  prairie_pioneer_description.urdf.xacro
hardware/include/ros2_control_demo_description/project_perry/urdf/: project_perry_description.urdf.xacro
hardware/include/umrt-arm-ros-firmware/: ArduinoStepperAdapter.hpp  StepperAdapter.hpp  arduino_stepper_adapter.hpp  diffbot_system.hpp  mks_stepper_adapter.hpp  project_perry_controller.hpp  robotic_arm_control_system.hpp  rover_control_system.hpp  stepper_adapter.hpp  visibility_control.h  wheel_adapter.hpp
joystick-operator/: CMakeLists.txt  package.xml  start.sh
joystick-operator/include/joystick_operator/: joystick_teleop_node.hpp
joystick-operator/launch/: joystick.launch.py  joystick.yaml
joystick-operator/src/: joystick_operator.cpp  joystick_teleop_node.cpp
joystick_operator/: CMakeLists.txt  package.xml
joystick_operator/include/joystick_operator/: joystick_teleop_node.hpp
joystick_operator/src/: joystick_teleop_node.cpp
keyboard-operator/: CMakeLists.txt
keyboard-operator/include/keyboard_operator/: KeyboardController.cpp  KeyboardController.h
keyboard-operator/src/: keyboard_operator.cpp
keyboard_operator/: CMakeLists.txt  package.xml
keyboard_operator/include/keyboard_operator/: KeyboardController.cpp  KeyboardController.h
spidev_lib/: CMakeLists.txt  package.xml
spidev_lib/src/: spidev_lib++.cc  spidev_lib.c
test/: test_urdf_xacro.py
umrt-arm-ros-firmware/: package.xml  umrt-arm-ros-firmware.xml
umrt-arm-ros-firmware/description/launch/: view_robot.launch.py
umrt-arm-ros-firmware/doc/: userdoc.rst
umrt-arm-ros-firmware/hardware/: StepperAdapter.cpp  diffbot_system.cpp
umrt-arm-ros-firmware/test/: test_view_robot_launch.py
